fix gap below footer

--- a/History_Trails/src/main/resources/static/styles.css
+++ b/History_Trails/src/main/resources/static/styles.css
@@ -1,6 +1,7 @@
 body {
     background-repeat: no-repeat;
-    background-size: cover;    background-attachment: fixed;
+    background-size: cover;
+    background-attachment: fixed;
     margin: 0;
 }
 
@@ -404,9 +405,15 @@ img {vertical-align: middle;}
         width: 35%;
         padding: 5px;
         font-size: 12px;
+    }
+}
+
+@media screen and (min-height: 1000px) {
+    .footer{
+        bottom: 0;
+        position: absolute;
 
     }
-
 }
 
 
